fix the image height on small screen by adjusting the width to a percentage value

--- a/style.css
+++ b/style.css
@@ -124,5 +124,8 @@ ol, ul {
 
        
     }
+    .card-image {
+        height: 35%
+    }
     
  }
